Bugfixed Enemies. Added randomization, fixed bullets.

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -4,5 +4,9 @@
     <string name="app_name">Asteroid</string>
     <string name="action_settings">Settings</string>
     <string name="hello_world">Hello world!</string>
+    <string name="title_activity_main_menu">MainMenu</string>
+    <string name="play">Play Asteroid</string>
+    <string name="ranking">Ranking</string>
+    <string name="title_activity_ranking">Ranking</string>
 
 </resources>
